Visual fixes: * Removed the damn horizontal scrollbar on most tables. * Changed some of the tables around to fit columns better

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -2247,7 +2247,7 @@ table th[class*="col-"] {
 }
 .table-responsive {
   min-height: .01%;
-  overflow-x: auto;
+  overflow-x: hidden;
 }
 @media screen and (max-width: 767px) {
   .table-responsive {
